# kaggle-vibecoding-agents-capstone-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-ja.md  README.md  pyproject.toml
conf/: config.yaml
docs/: HANDOFF.md  VIDEO_SCRIPT-ja.md  VIDEO_SCRIPT.md  WRITEUP.md
docs/slides/: README.md
scripts/: deploy-hf.sh  get_data.sh
src/kaggle_vibecoding_agents_capstone_project/: __init__.py  agent.py  eval.py  memory.py  models.py  security.py  web.py
src/kaggle_vibecoding_agents_capstone_project/roles/: __init__.py  orchestrator.py  planner.py  planner_llm.py  profiler.py  verifier.py
src/kaggle_vibecoding_agents_capstone_project/static/: index.html
src/kaggle_vibecoding_agents_capstone_project/tools/: __init__.py  places.py  weather.py
