[project]
name = "kaggle-vibecoding-agents-capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cncgl", email = "concigel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.3.0",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
]

[project.scripts]
kaggle-vibecoding-agents-capstone-project = "kaggle_vibecoding_agents_capstone_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
